# mill

./: Cargo.toml  README.md  main.bc  main.c  main.ll  prog.wf
src/: ast.rs  grammar.lalrpop  main.rs  nodes.rs  pass.rs  runner.rs  symbol_table.rs  utils.rs
src/ast/: ast.rs
src/codegen/: mod.rs
src/lir/: graphviz.rs  lowering.rs  mod.rs  tree.rs
src/tests/: grammar.rs  ir.rs  mod.rs  prelude.rs
src/tests/snapshots/: mill__tests__ir__addition.snap  mill__tests__ir__alloc_struct.snap  mill__tests__ir__assignment.snap  mill__tests__ir__call_when_names_in_order.snap  mill__tests__ir__call_when_names_in_order.snap.new  mill__tests__ir__call_when_names_not_in_order.snap  mill__tests__ir__conditional.snap  mill__tests__ir__conditional_with_else.snap  mill__tests__ir__conditional_with_else_and_assignment.snap.new  mill__tests__ir__field_access.snap  mill__tests__ir__field_assign.snap  mill__tests__ir__mixed_guards.snap  mill__tests__ir__multiple_addition_with_vars.snap  mill__tests__ir__one_guard_with_expr.snap  mill__tests__ir__reassignment.snap  mill__tests__ir__return.snap  mill__tests__ir__struct.snap  wiegenfest__tests__ir__addition.snap  wiegenfest__tests__ir__call_when_names_in_order.snap  wiegenfest__tests__ir__call_when_names_not_in_order.snap  wiegenfest__tests__ir__mixed_guards.snap  wiegenfest__tests__ir__multiple_addition.snap  wiegenfest__tests__ir__reassignment.snap  (+2 more)
src/traversal/: codegen.rs  mod.rs  normal.rs
src/visitors/: check_if_function_call_exists.rs  check_if_function_has_return_ty.rs  codegen.rs  impl.rs  mod.rs  nodes.rs  print_visitor.rs
(+3 files in other folders)
