[package]
name = "wiegenfest"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.19.4"
regex = "1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
insta = "1.5.3"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"

[build-dependencies]
lalrpop = "*"
