[package]
name = "mill"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
llvm-sys = "100"
insta = "1.5.3"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
either = "1.6.1"

[build-dependencies]
lalrpop = "0.19.6"
