[package]
name = "mill"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.20.0"
regex = "1"
llvm-sys = "130"
insta = "1.5.3"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
either = "1.6.1"
libc = "0.2.139"

[build-dependencies]
lalrpop = "0.20.0"